<resources>
    <string name="app_name">ChronoSchedule</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Write username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_DayForm">Edit Day</string>
    <string name="title_activity_Login">Chrono login</string>
    <string name="title_activity_Main">ChronoSchedule</string>
    <string name="title_activity_Settings">Chrono setup</string>
    <string name="title_activity_ShiftForm">Edit Shift</string>
    <string name="title_activity_UserForm">Edit User</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Edit DayShift Activity -->
    <string name="edit_shiftday_label_date">Day shift on date:</string>
    <string name="edit_shiftday_label_user">Day shift for user:</string>
    <string name="edit_shiftday_label_shift">Select shift:</string>
    <string name="edit_shiftday_show_startttime">Journey start time:</string>
    <string name="edit_shiftday_show_endttime">Journey end time:</string>



    <!-- Edit Shift Activity -->
    <string name="edit_shift_label_name">Shift designation or name:</string>
    <string name="edit_shift_pick_starttime">Shift start time:</string>
    <string name="edit_shift_pick_endtime">Shift end time:</string>
    <string name="edit_shift_pick_color">Choose shift calendar color:</string>

    <!-- Edit User Activity -->
    <string name="edit_user_label_name">User login username:</string>
    <string name="edit_user_label_password">User login password:</string>
    <string name="edit_user_label_dni">User ID/DNI number:</string>
    <string name="edit_user_label_fullname">Full user name:</string>
    <string name="edit_user_label_admin">User permissions:</string>
    <string name="edit_user_label_checkboxtext">Administrator</string>

</resources>
